Updated the code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <router-outlet></router-outlet>
 <offee-datatable [title]="title" [datasource]="datasource" [columns]="columns"></offee-datatable>
-<!-- <offee-reusable-table [title]="title" [datasource1]="datasource1" [columns1]="columns1"></offee-reusable-table> -->
+<!-- <offee-reusable-table></offee-reusable-table> -->
