--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -1,58 +1,54 @@
 <div class="container mat-elevation-z8">
-    <table mat-table [dataSource]="gridData">
-       <ng-container matColumnDef="action" [sticky]="true">
-          <th mat-header-cell *matHeaderCellDef>Action</th>
-          <td mat-cell *matCellDef="let element; let i = index">
-             <button
-                mat-icon-button
-                class="material-icons app-toolbar-menu save-button"
-                matTooltip="Save Changes"
-                color="primary"
-                >
-                <mat-icon>check_circle</mat-icon>
-             </button>
-             <button
-                mat-icon-button
-                class="material-icons app-toolbar-menu cancel-button"
-                matTooltip="Cancel Changes"
-                color="warn"
-                >
-                <mat-icon>cancel</mat-icon>
-             </button>
-             <button
-                mat-icon-button
-                class="material-icons app-toolbar-menu save-button"
-                matTooltip="Edit"
-                color="primary"
-                >
-                <mat-icon>edit</mat-icon>
-             </button>
-             <button
-                mat-icon-button
-                class="material-icons app-toolbar-menu delete-button"
-                matTooltip="Delete"
-                color="warn"
-                >
-                <mat-icon>delete</mat-icon>
-             </button>
-          </td>
-       </ng-container>
-       <ng-container
-       matColumnDef="{{ column.colValue }}"
-       [sticky]="column.isSticky"
-       *ngFor="let column of columns"
-       >
-       <th mat-header-cell *matHeaderCellDef>{{ column.colDisplayValue }}</th>
-       <td mat-cell *matCellDef="let element">{{ element[column.colValue] }}</td>
-       </ng-container>
-       <tr mat-header-row *matHeaderRowDef="colValues; sticky: true"></tr>
-       <tr mat-row *matRowDef="let row; columns: colValues"></tr>
-    </table>
+    <form [formGroup]="gridForm" autocomplete="off">
+        <ng-container formArrayName="gridRows">
+            <table mat-table [dataSource]="gridData">
+                <ng-container matColumnDef="action" [sticky]="true">
+                    <th mat-header-cell *matHeaderCellDef>Action</th>
+                    <td mat-cell *matCellDef="let element; let i = index" [formGroup]="element">
+                        <button 
+                            *ngIf="gridForm.get('gridRows')?.value[i].isEditable"
+                            mat-icon-button class="material-icons app-toolbar-menu save-button"
+                            matTooltip="Save Changes" color="primary">
+                            <mat-icon>check_circle</mat-icon>
+                        </button>
+                        <button 
+                            *ngIf="gridForm.get('gridRows')?.value[i].isEditable"
+                            mat-icon-button class="material-icons app-toolbar-menu cancel-button"
+                            matTooltip="Cancel Changes" color="warn">
+                            <mat-icon>cancel</mat-icon>
+                        </button>
+                        <button 
+                            *ngIf="!gridForm.get('gridRows')?.value[i].isEditable"
+                            mat-icon-button class="material-icons app-toolbar-menu save-button" 
+                            matTooltip="Edit" color="primary">
+                            <mat-icon>edit</mat-icon>
+                        </button>
+                        <button 
+                            *ngIf="!gridForm.get('gridRows')?.value[i].isEditable"
+                            mat-icon-button class="material-icons app-toolbar-menu delete-button"
+                            matTooltip="Delete" color="warn">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="{{ column.colValue }}" [sticky]="column.isSticky"
+                    *ngFor="let column of columns">
+                    <th mat-header-cell *matHeaderCellDef>{{ column.colDisplayValue }}</th>
+                    <td mat-cell *matCellDef="let element; let i = index" [formGroup]="element">
+                        <!-- {{ element[column.colValue] }} -->
+                        <mat-form-field
+                            [appearance]="gridForm.get('gridRows')?.value[i].isEditable ? 'fill' : 'outline'">
+                            <input matInput type="text" placeholder="{{column.colValue}}" formControlName="{{column.colValue}}" [readonly]="gridForm.get('gridRows')?.value[i].isEditable">
+                        </mat-form-field>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="colValues; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: colValues"></tr>
+            </table>
+        </ng-container>
+    </form>
+
     <div class="sticky-paginator">
-       <mat-paginator
-          fixed
-          [pageSizeOptions]="[25, 50, 100]"
-          showFirstLastButtons
-          ></mat-paginator>
+        <mat-paginator fixed [pageSizeOptions]="[25, 50, 100]" showFirstLastButtons></mat-paginator>
     </div>
- </div>
+</div>
