--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -5,29 +5,26 @@
                 <ng-container matColumnDef="action" [sticky]="true">
                     <th mat-header-cell *matHeaderCellDef>Action</th>
                     <td mat-cell *matCellDef="let element; let i = index" [formGroup]="element">
-                        <button 
+                        <button
+                            (click)="saveGridFrom(gridForm, i)" 
                             *ngIf="gridForm.get('gridRows')?.value[i].isEditable"
                             mat-icon-button class="material-icons app-toolbar-menu save-button"
                             matTooltip="Save Changes" color="primary">
                             <mat-icon>check_circle</mat-icon>
                         </button>
                         <button 
+                            (click)="cancelGridForm(gridForm, i)"
                             *ngIf="gridForm.get('gridRows')?.value[i].isEditable"
                             mat-icon-button class="material-icons app-toolbar-menu cancel-button"
                             matTooltip="Cancel Changes" color="warn">
                             <mat-icon>cancel</mat-icon>
                         </button>
                         <button 
+                            (click)="editGridForm(gridForm, i)"
                             *ngIf="!gridForm.get('gridRows')?.value[i].isEditable"
                             mat-icon-button class="material-icons app-toolbar-menu save-button" 
                             matTooltip="Edit" color="primary">
                             <mat-icon>edit</mat-icon>
-                        </button>
-                        <button 
-                            *ngIf="!gridForm.get('gridRows')?.value[i].isEditable"
-                            mat-icon-button class="material-icons app-toolbar-menu delete-button"
-                            matTooltip="Delete" color="warn">
-                            <mat-icon>delete</mat-icon>
                         </button>
                     </td>
                 </ng-container>
@@ -36,9 +33,9 @@
                     <th mat-header-cell *matHeaderCellDef>{{ column.colDisplayValue }}</th>
                     <td mat-cell *matCellDef="let element; let i = index" [formGroup]="element">
                         <!-- {{ element[column.colValue] }} -->
-                        <mat-form-field
-                            [appearance]="gridForm.get('gridRows')?.value[i].isEditable ? 'fill' : 'outline'">
-                            <input matInput type="text" placeholder="{{column.colValue}}" formControlName="{{column.colValue}}" [readonly]="gridForm.get('gridRows')?.value[i].isEditable">
+                        <mat-form-field style="font-size: 11px"
+                            [appearance]="!gridForm.get('gridRows')?.value[i].isEditable ? 'fill': 'outline'">
+                            <input matInput type="text" placeholder="Enter {{column.colDisplayValue}}" formControlName="{{column.colValue}}" [readonly]="gridForm.get('gridRows')?.value[i].isEditable && column.isReadOnly ? true: false">
                         </mat-form-field>
                     </td>
                 </ng-container>
