--- a/src/app/shared/components/datatable/datatable.component.html
+++ b/src/app/shared/components/datatable/datatable.component.html
@@ -5,25 +5,21 @@
                 <ng-container matColumnDef="action" [sticky]="true">
                     <th mat-header-cell *matHeaderCellDef>Action</th>
                     <td mat-cell *matCellDef="let element; let i = index" [formGroup]="element">
-                        <button
-                            (click)="saveGridFrom(gridForm, i)" 
-                            *ngIf="gridForm.get('gridRows')?.value[i].isEditable"
-                            mat-icon-button class="material-icons app-toolbar-menu save-button"
-                            matTooltip="Save Changes" color="primary">
+                        <button (click)="saveGridFrom(gridForm, i)"
+                            *ngIf="gridForm.get('gridRows')?.value[i].isEditable" mat-icon-button
+                            class="material-icons app-toolbar-menu save-button" matTooltip="Save Changes"
+                            color="primary">
                             <mat-icon>check_circle</mat-icon>
                         </button>
-                        <button 
-                            (click)="cancelGridForm(gridForm, i)"
-                            *ngIf="gridForm.get('gridRows')?.value[i].isEditable"
-                            mat-icon-button class="material-icons app-toolbar-menu cancel-button"
-                            matTooltip="Cancel Changes" color="warn">
+                        <button (click)="cancelGridForm(gridForm, i)"
+                            *ngIf="gridForm.get('gridRows')?.value[i].isEditable" mat-icon-button
+                            class="material-icons app-toolbar-menu cancel-button" matTooltip="Cancel Changes"
+                            color="warn">
                             <mat-icon>cancel</mat-icon>
                         </button>
-                        <button 
-                            (click)="editGridForm(gridForm, i)"
-                            *ngIf="!gridForm.get('gridRows')?.value[i].isEditable"
-                            mat-icon-button class="material-icons app-toolbar-menu save-button" 
-                            matTooltip="Edit" color="primary">
+                        <button (click)="editGridForm(gridForm, i)"
+                            *ngIf="!gridForm.get('gridRows')?.value[i].isEditable" mat-icon-button
+                            class="material-icons app-toolbar-menu save-button" matTooltip="Edit" color="primary">
                             <mat-icon>edit</mat-icon>
                         </button>
                     </td>
@@ -33,10 +29,56 @@
                     <th mat-header-cell *matHeaderCellDef>{{ column.colDisplayValue }}</th>
                     <td mat-cell *matCellDef="let element; let i = index" [formGroup]="element">
                         <!-- {{ element[column.colValue] }} -->
-                        <mat-form-field style="font-size: 11px"
-                            [appearance]="!gridForm.get('gridRows')?.value[i].isEditable ? 'fill': 'outline'">
-                            <input matInput type="text" placeholder="Enter {{column.colDisplayValue}}" formControlName="{{column.colValue}}" [readonly]="gridForm.get('gridRows')?.value[i].isEditable && column.isReadOnly ? true: false">
-                        </mat-form-field>
+                        <ng-container *ngIf="!gridForm.get('gridRows')?.value[i].isEditable">
+                            <mat-form-field style="font-size: 11px"
+                                [appearance]="!gridForm.get('gridRows')?.value[i].isEditable ? 'fill': 'outline'">
+                                <input matInput type="text" placeholder="Enter {{column.colDisplayValue}}"
+                                    formControlName="{{column.colValue}}"
+                                    [readonly]="!gridForm.get('gridRows')?.value[i].isEditable ? true : (column.isReadOnly) ? true : false">
+                            </mat-form-field>
+                        </ng-container>
+                        <ng-container *ngIf="gridForm.get('gridRows')?.value[i].isEditable">
+                            <div [ngSwitch]="column.colDataType">
+                                <mat-form-field  *ngSwitchCase="'checkbox'" style="font-size: 11px" [appearance]="!gridForm.get('gridRows')?.value[i].isEditable ? 'fill': 'outline'">
+                                    <mat-select required formControlName="{{column.colValue}}" style="font-size: 11px">
+                                        <mat-option>--select something --</mat-option>
+                                        <mat-option [value]="'TRUE'">TRUE</mat-option>
+                                        <mat-option [value]="'FALSE'">FALSE</mat-option>
+                                        <!-- <mat-option *ngFor="let ele of getComboValues(column.colValue)" [value]="ele.value">{{ele.viewValue}}</mat-option> -->
+                                    </mat-select>
+                                </mat-form-field>
+                                <mat-form-field *ngSwitchCase="'comboboxes'" style="font-size: 11px"
+                                    [appearance]="!gridForm.get('gridRows')?.value[i].isEditable ? 'fill': 'outline'">
+                                    <mat-select required formControlName="{{column.colValue}}" style="font-size: 11px" name="column.colValue">
+                                        <mat-option>--select something --</mat-option>
+                                        <mat-option *ngFor="let item of getGridFormDropdownList(column)" [value]="item">{{item}}</mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                                <mat-form-field *ngSwitchDefault style="font-size: 11px"
+                                    [appearance]="!gridForm.get('gridRows')?.value[i].isEditable ? 'fill': 'outline'">
+                                    <input matInput type="text" placeholder="Enter {{column.colDisplayValue}}"
+                                        formControlName="{{column.colValue}}"
+                                        [readonly]="!gridForm.get('gridRows')?.value[i].isEditable ? true : (column.isReadOnly) ? true : false">
+                                </mat-form-field>
+                            </div>
+
+                            <!-- <mat-form-field>
+                                <ng-container *ngIf="column.colDataType === 'checkbox'">
+                                    <mat-checkbox formControlName="{{column.colValue}}">TRUE</mat-checkbox>
+                                    <mat-checkbox formControlName="{{column.colValue}}">FALSE</mat-checkbox>
+                                </ng-container>
+                            </mat-form-field>
+                            <mat-form-field>
+                                <ng-container *ngIf="column.colDataType === 'comboboxes'">
+                                    <mat-select formControlName="{{column.colValue}}">
+                                        <mat-option value="element[column.colValue]">0</mat-option>
+                                        <mat-option value="element[column.colValue]">1</mat-option>
+                                        <mat-option value="element[column.colValue]">2</mat-option>
+                                    </mat-select>
+                                </ng-container>
+                            </mat-form-field> -->
+                        </ng-container>
+
                     </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="colValues; sticky: true"></tr>
